<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name_release">Koushir Calendar</string>
    <string name="app_name_debug">Koushir Cal dubug</string>
    <string name="action_settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="contact">Contact for support</string>
    <string name="about">About</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="reload">RETRY</string>
    <string name="important_events_for_this_month">Important events for this month :</string>
    <string name="cd_left_navigation">Left navigation</string>
    <string name="cd_right_navigation">Right navigation</string>
    <string name="calendar">Calendar</string>
    <string name="featured">Featured</string>
    <string name="title_hanumanchalisa">श्री हनुमान चालीस</string>
    <string name="item_hanumanchalisa">\n ॥दोहा॥ \n\n श्री गुरु चरन सरोज रज, निज मनु मुकुर सुधारि। \n \n बरनउं रघुबर विमल जसु, जो दायकु फल चारि॥ \n \n बुद्धिहीन तनु जानिकै, सुमिरौं पवन-कुमार। \n \n बल बुद्धि विद्या देहु मोहिं, हरहु कलेश विकार॥ \n \n \n ॥चौपाई॥ \n \n जय हनुमान ज्ञान गुण सागर। जय कपीस तिहुँ लोक उजागर॥ \n \n राम दूत अतुलित बल धामा। अंजनि-पुत्र पवनसुत नामा॥ \n \n महावीर विक्रम बजरंगी। कुमति निवार सुमति के संगी॥ \n \n कंचन बरन बिराज सुवेसा। कानन कुण्डल कुंचित केसा॥ \n \n हाथ वज्र औ ध्वजा बिराजै। काँधे मूँज जनेऊ साजै॥ \n \n शंकर सुवन केसरीनन्दन। तेज प्रताप महा जग वन्दन॥ \n \n विद्यावान गुणी अति चातुर। राम काज करिबे को आतुर॥ \n \n प्रभु चरित्र सुनिबे को रसिया। राम लखन सीता मन बसिया॥ \n \n सूक्ष्म रुप धरि सियहिं दिखावा। विकट रुप धरि लंक जरावा॥ \n \n भीम रुप धरि असुर संहारे। रामचन्द्र के काज संवारे॥ \n \n लाय सजीवन लखन जियाये। श्रीरघुवीर हरषि उर लाये॥ \n \n रघुपति कीन्ही बहुत बड़ाई। तुम मम प्रिय भरतहि सम भाई॥ \n \n सहस बदन तुम्हरो यश गावैं। अस कहि श्री पति कंठ लगावैं॥ \n \n सनकादिक ब्रह्मादि मुनीसा। नारद सारद सहित अहीसा॥ \n \n जम कुबेर दिकपाल जहां ते। कवि कोबिद कहि सके कहां ते॥ \n \n तुम उपकार सुग्रीवहिं कीन्हा। राम मिलाय राज पद दीन्हा॥ \n \n तुम्हरो मन्त्र विभीषन माना। लंकेश्वर भये सब जग जाना॥ \n \n जुग सहस्त्र योजन पर भानू । लील्यो ताहि मधुर फ़ल जानू॥ \n \n प्रभु मुद्रिका मेलि मुख माहीं। जलधि लांघि गए अचरज नाहीं॥ \n \n दुर्गम काज जगत के जेते। सुगम अनुग्रह तुम्हरे तेते॥ \n \n राम दुआरे तुम रखवारे। होत न आज्ञा बिनु पैसारे॥ \n \n सब सुख लहै तुम्हारी सरना। तुम रक्षक काहू को डरना॥ \n \n आपन तेज सम्हारो आपै। तीनों लोक हांक तें कांपै॥ \n \n भूत पिशाच निकट नहिं आवै। महावीर जब नाम सुनावै॥ \n \n नासै रोग हरै सब पीरा। जपत निरंतर हनुमत बीरा॥ \n \n संकट ते हनुमान छुड़ावै। मन क्रम वचन ध्यान जो लावै॥ \n \n सब पर राम तपस्वी राजा। तिन के काज सकल तुम साजा॥ \n \n और मनोरथ जो कोई लावै। सोइ अमित जीवन फ़ल पावै॥ \n \n चारों जुग परताप तुम्हारा। है परसिद्ध जगत उजियारा॥ \n \n साधु सन्त के तुम रखवारे। असुर निकन्दन राम दुलारे॥ \n \n अष्ट सिद्धि नवनिधि के दाता। अस बर दीन जानकी माता॥ \n \n राम रसायन तुम्हरे पासा। सदा रहो रघुपति के दासा॥ \n \n तुम्हरे भजन राम को पावै। जनम जनम के दुख बिसरावै॥ \n \n अन्तकाल रघुबर पुर जाई। जहाँ जन्म हरि-भक्त कहाई॥ \n \n और देवता चित्त न धरई। हनुमत सेई सर्व सुख करई॥ \n \n संकट कटै मिटै सब पीरा। जो सुमिरै हनुमत बलबीरा॥ \n \n जय जय जय हनुमान गोसाई। कृपा करहु गुरुदेव की नाई॥ \n \n जो शत बार पाठ कर सोई। छूटहिं बंदि महा सुख होई॥ \n \n जो यह पढ़ै हनुमान चालीसा। होय सिद्धि साखी गौरीसा॥ \n \n तुलसीदास सदा हरि चेरा। कीजै नाथ ह्रदय महँ डेरा॥ \n \n \n ॥दोहा॥ \n \n पवनतनय संकट हरन, मंगल मूरति रुप। \n \n राम लखन सीता सहित ह्रदय बसहु सुर भूप॥ \n \n </string>
    <string name="title_krishnachalisa">शश्री कृष्ण चालीसा</string>
    <string name="item_krishnachalisa">\n ॥दोहा॥ \n \n बंशी शोभित कर मधुर, नील जलद तन श्याम। \n अरुण अधर जनु बिम्बा फल, नयन कमल अभिराम॥ \n पूर्ण इन्द्र, अरविन्द मुख, पिताम्बर शुभ साज। \n जय मनमोहन मदन छवि, कृष्णचन्द्र महाराज॥ \n\n\n ॥चौपाई॥ \n \n जय यदुनन्दन जय जगवन्दन। जय वसुदेव देवकी नन्दन॥ \n जय यशुदा सुत नन्द दुलारे। जय प्रभु भक्तन के दृग तारे॥ \n जय नट-नागर नाग नथैया। कृष्ण कन्हैया धेनु चरैया॥ \n पुनि नख पर प्रभु गिरिवर धारो। आओ दीनन कष्ट निवारो॥ \n वंशी मधुर अधर धरी तेरी। होवे पूर्ण मनोरथ मेरो॥ \n आओ हरि पुनि माखन चाखो। आज लाज भारत की राखो॥ \n गोल कपोल, चिबुक अरुणारे। मृदु मुस्कान मोहिनी डारे॥ \n रंजित राजिव नयन विशाला। मोर मुकुट वैजयंती माला॥ \n कुण्डल श्रवण पीतपट आछे। कटि किंकणी काछन काछे॥ \n नील जलज सुन्दर तनु सोहे। छवि लखि, सुर नर मुनिमन मोहे॥ \n मस्तक तिलक, अलक घुंघराले। आओ कृष्ण बांसुरी वाले॥ \n करि पय पान, पुतनहि तारयो। अका बका कागासुर मारयो॥ \n मधुवन जलत अग्नि जब ज्वाला। भै शीतल, लखितहिं नन्दलाला॥ \n सुरपति जब ब्रज चढ़यो रिसाई। मसूर धार वारि वर्षाई॥ \n लगत-लगत ब्रज चहन बहायो। गोवर्धन नखधारि बचायो॥ \n लखि यसुदा मन भ्रम अधिकाई। मुख महं चौदह भुवन दिखाई॥ \n दुष्ट कंस अति उधम मचायो। कोटि कमल जब फूल मंगायो॥ \n नाथि कालियहिं तब तुम लीन्हें। चरणचिन्ह दै निर्भय किन्हें॥ \n करि गोपिन संग रास विलासा। सबकी पूरण करी अभिलाषा॥ \n केतिक महा असुर संहारयो। कंसहि केस पकड़ि दै मारयो॥ \n मात-पिता की बन्दि छुड़ाई। उग्रसेन कहं राज दिलाई॥ \n महि से मृतक छहों सुत लायो। मातु देवकी शोक मिटायो॥ \n भौमासुर मुर दैत्य संहारी। लाये षट दश सहसकुमारी॥ \n दै भिन्हीं तृण चीर सहारा। जरासिंधु राक्षस कहं मारा॥ \n असुर बकासुर आदिक मारयो। भक्तन के तब कष्ट निवारियो॥ \n दीन सुदामा के दुःख टारयो। तंदुल तीन मूंठ मुख डारयो॥ \n प्रेम के साग विदुर घर मांगे। दुर्योधन के मेवा त्यागे॥ \n लखि प्रेम की महिमा भारी। ऐसे श्याम दीन हितकारी॥ \n भारत के पारथ रथ हांके। लिए चक्र कर नहिं बल ताके॥ \n निज गीता के ज्ञान सुनाये। भक्तन ह्रदय सुधा वर्षाये॥ \n मीरा थी ऐसी मतवाली। विष पी गई बजाकर ताली॥ \n राना भेजा सांप पिटारी। शालिग्राम बने बनवारी॥ \n निज माया तुम विधिहिं दिखायो। उर ते संशय सकल मिटायो॥ \n तब शत निन्दा करी तत्काला। जीवन मुक्त भयो शिशुपाला॥ \n जबहिं द्रौपदी टेर लगाई। दीनानाथ लाज अब जाई॥ \n तुरतहिं वसन बने ननन्दलाला। बढ़े चीर भै अरि मुँह काला॥ \n अस नाथ के नाथ कन्हैया। डूबत भंवर बचावत नैया॥ \n सुन्दरदास आस उर धारी। दयादृष्टि कीजै बनवारी॥ \n नाथ सकल मम कुमति निवारो। क्षमहु बेगि अपराध हमारो॥ \n खोलो पट अब दर्शन दीजै। बोलो कृष्ण कन्हैया की जै॥ \n \n\n ॥दोहा॥ \n \n यह चालीसा कृष्ण का, पाठ करै उर धारि। \n अष्ट सिद्धि नवनिधि फल, लहै पदारथ चारि॥ \n</string>
    <string name="title_ganeshaarti">श्री गणेशजी की आरती</string>
    <string name="title_eng_ganeshaarti">Sri GaneshJi Aarti</string>
    <string name="item_ganeshaarti">\n जय गणेश जय गणेश जय गणेश देवा। \n माता जाकी पार्वती पिता महादेवा॥ x2 \n \n एकदन्त दयावन्त चारभुजाधारी \n माथे पर तिलक सोहे मूसे की सवारी। x2 \n (माथे पर सिन्दूर सोहे, मूसे की सवारी) \n पान चढ़े फूल चढ़े और चढ़े मेवा \n (हार चढ़े, फूल चढ़े और चढ़े मेवा) \n लड्डुअन का भोग लगे सन्त करें सेवा॥ x2 \n \n जय गणेश जय गणेश जय गणेश देवा। \n माता जाकी पार्वती पिता महादेवा॥ \n \n अँधे को आँख देत कोढ़िन को काया \n बाँझन को पुत्र देत निर्धन को माया। x2 \n सूर श्याम शरण आए सफल कीजे सेवा \n माता जाकी पार्वती पिता महादेवा॥ x2 \n (दीनन की लाज राखो, शम्भु सुतवारी ) \n (कामना को पूर्ण करो, जग बलिहारी॥) \n जय गणेश जय गणेश जय गणेश देवा। \n माता जाकी पार्वती पिता महादेवा॥ \n</string>
    <string name="title_eng_ambeymataaarti">Ambey Mata Aarti</string>
    <string name="title_ambeymataaarti">आरती श्री अम्बे गौरी जी</string>
    <string name="item_ambeymataaarti">\n जय अम्बे गौरी, मैया जय श्यामा गौरी। \n तुमको निशिदिन ध्यावत, हरि ब्रह्मा शिवरी॥ \n जय अम्बे गौरी \n माँग सिंदूर विराजत, टीको मृगमद को। \n उज्जवल से दो‌उ नैना, चन्द्रवदन नीको॥ \n जय अम्बे गौरी \n कनक समान कलेवर, रक्ताम्बर राजै। \n रक्तपुष्प गल माला, कण्ठन पर साजै॥ \n जय अम्बे गौरी \n केहरि वाहन राजत, खड्ग खप्परधारी। \n सुर-नर-मुनि-जन सेवत, तिनके दुखहारी॥ \n जय अम्बे गौरी \n कानन कुण्डल शोभित, नासाग्रे मोती। \n कोटिक चन्द्र दिवाकर, सम राजत ज्योति॥ \n जय अम्बे गौरी \n शुम्भ-निशुम्भ बिदारे, महिषासुर घाती। \n धूम्र विलोचन नैना, निशिदिन मदमाती॥ \n जय अम्बे गौरी \n चण्ड-मुण्ड संहारे, शोणित बीज हरे। \n मधु-कैटभ दो‌उ मारे, सुर भयहीन करे॥ \n जय अम्बे गौरी \n ब्रहमाणी रुद्राणी तुम कमला रानी। \n आगम-निगम-बखानी, तुम शिव पटरानी॥ \n जय अम्बे गौरी \n चौंसठ योगिनी मंगल गावत, नृत्य करत भैरूँ। \n बाजत ताल मृदंगा, अरु बाजत डमरु॥ \n जय अम्बे गौरी \n तुम ही जग की माता, तुम ही हो भरता। \n भक्‍तन की दु:ख हरता, सुख सम्पत्ति करता॥ \n जय अम्बे गौरी \n भुजा चार अति शोभित, वर-मुद्रा धारी। \n मनवांछित फल पावत, सेवत नर-नारी॥ \n जय अम्बे गौरी \n कंचन थाल विराजत, अगर कपूर बाती। \n श्रीमालकेतु में राजत, कोटि रतन ज्योति॥ \n जय अम्बे गौरी \n श्री अम्बेजी की आरती, जो को‌ई नर गावै। \n कहत शिवानन्द स्वामी, सुख सम्पत्ति पावै॥ \n जय अम्बे गौरी \n</string>
    <string name="title_eng_durgemataaarti">Durga Mata Aarti</string>
    <string name="title_durgemataaarti">शआरती श्री दुर्गाजी</string>
    <string name="item_durgemataaarti">\n अम्बे तू है जगदम्बे काली, जय दुर्गे खप्पर वाली, \n तेरे ही गुण गावें भारती, ओ मैया हम सब उतारे तेरी आरती। \n तेरे भक्त जनो पर माता भीर पड़ी है भारी। \n दानव दल पर टूट पडो माँ करके सिंह सवारी॥ \n सौ-सौ सिहों से बलशाली, है अष्ट भुजाओं वाली, \n दुष्टों को तू ही ललकारती। \n ओ मैया हम सब उतारे तेरी आरती॥ \n माँ-बेटे का है इस जग मे बडा ही निर्मल नाता। \n पूत-कपूत सुने है पर ना माता सुनी कुमाता॥ \n सब पे करूणा दर्शाने वाली, अमृत बरसाने वाली, \n दुखियों के दुखडे निवारती। \n ओ मैया हम सब उतारे तेरी आरती॥ \n नहीं मांगते धन और दौलत, न चांदी न सोना। \n हम तो मांगें तेरे चरणों में छोटा सा कोना॥ \n सबकी बिगड़ी बनाने वाली, लाज बचाने वाली, \n सतियों के सत को सवांरती। \n ओ मैया हम सब उतारे तेरी आरती॥ \n चरण शरण में खड़े तुम्हारी, ले पूजा की थाली। \n वरद हस्त सर पर रख दो माँ संकट हरने वाली॥ \n माँ भर दो भक्ति रस प्याली, अष्ट भुजाओं वाली, \n भक्तों के कारज तू ही सारती।। \n ओ मैया हम सब उतारे तेरी आरती॥ \n</string>
    <string name="title_eng_hanumanaarti">Sri Hanuman Aarti</string>
    <string name="title_hanumanaarti">आरती श्री हनुमानजी</string>
    <string name="item_hanumanaarti">\n आरती कीजै हनुमान लला की। दुष्ट दलन रघुनाथ कला की॥ \n जाके बल से गिरिवर कांपे। रोग दोष जाके निकट न झांके॥ \n अंजनि पुत्र महा बलदाई। सन्तन के प्रभु सदा सहाई॥ \n दे बीरा रघुनाथ पठाए। लंका जारि सिया सुधि लाए॥ \n लंका सो कोट समुद्र-सी खाई। जात पवनसुत बार न लाई॥ \n लंका जारि असुर संहारे। सियारामजी के काज सवारे॥ \n लक्ष्मण मूर्छित पड़े सकारे। आनि संजीवन प्राण उबारे॥ \n पैठि पाताल तोरि जम-कारे। अहिरावण की भुजा उखारे॥ \n बाएं भुजा असुरदल मारे। दाहिने भुजा संतजन तारे॥ \n सुर नर मुनि आरती उतारें। जय जय जय हनुमान उचारें॥ \n कंचन थार कपूर लौ छाई। आरती करत अंजना माई॥ \n जो हनुमानजी की आरती गावे। बसि बैकुण्ठ परम पद पावे॥ \n</string>
    <string name="title_eng_jagdishaarti">Sri Jagdish Aarti</string>
    <string name="title_jagdishaarti">आरती श्री जगदीशजी</string>
    <string name="item_jagdishaarti">\n ॐ जय जगदीश हरे, स्वामी ! जय जगदीश हरे। \n भक्त जनों के संकट, क्षण में दूर करे॥ \n ॐ जय जगदीश हरे। \n जो ध्यावे फल पावे, दुःख विनसे मन का। \n स्वामी दुःख विनसे मन का। \n सुख सम्पत्ति घर आवे, कष्ट मिटे तन का॥ \n ॐ जय जगदीश हरे। \n मात-पिता तुम मेरे, शरण गहूँ मैं किसकी। \n स्वामी शरण गहूँ मैं किसकी। \n तुम बिन और न दूजा, आस करूँ जिसकी॥ \n ॐ जय जगदीश हरे। \n तुम पूरण परमात्मा, तुम अन्तर्यामी। \n स्वामी तुम अन्तर्यामी। \n पारब्रह्म परमेश्वर, तुम सबके स्वामी॥ \n ॐ जय जगदीश हरे। \n तुम करुणा के सागर, तुम पालन-कर्ता। \n स्वामी तुम पालन-कर्ता। \n मैं मूरख खल कामी, कृपा करो भर्ता॥ \n ॐ जय जगदीश हरे। \n तुम हो एक अगोचर, सबके प्राणपति। \n स्वामी सबके प्राणपति। \n किस विधि मिलूँ दयामय, तुमको मैं कुमति॥ \n ॐ जय जगदीश हरे। \n दीनबन्धु दुखहर्ता, तुम ठाकुर मेरे। \n स्वामी तुम ठाकुर मेरे। \n अपने हाथ उठा‌ओ, द्वार पड़ा तेरे॥ \n ॐ जय जगदीश हरे। \n विषय-विकार मिटा‌ओ, पाप हरो देवा। \n स्वमी पाप हरो देवा। \n श्रद्धा-भक्ति बढ़ा‌ओ, सन्तन की सेवा॥ \n ॐ जय जगदीश हरे। \n श्री जगदीशजी की आरती, जो कोई नर गावे। \n स्वामी जो कोई नर गावे। \n कहत शिवानन्द स्वामी, सुख संपत्ति पावे॥ \n ॐ जय जगदीश हरे। \n</string>
    <string name="title_eng_krishnaaarti">Sri Krishna Aarti</string>
    <string name="title_krishnaaarti">आरती श्री गिरिधर कृष्णमुरारी की</string>
    <string name="ic_om">om</string>
</resources>