<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="aarti"
            type="koushur.kashmirievents.data.Aarti" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_saturated_violet">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_desaturated_violet"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:contentDescription="@string/ic_om"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_om" />

                <TextView
                    android:id="@+id/title_aarti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_marginBottom="@dimen/dimen_2dp"
                    android:lineSpacingExtra="@dimen/dimen_2dp"
                    android:text="@{aarti.titleHindi}"
                    android:textSize="@dimen/dimen_sp24"
                    tools:text="@string/title_ambeymataaarti" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:padding="@dimen/dimen_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tv_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1dp"
                android:text="@{aarti.aartiString}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_sp19"
                tools:text="@string/item_ganeshaarti" />
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
