<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="koushur.kashmirievents.presentation.ui.main.calendar.LandingViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gunmetal"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/exOneAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gunmetal"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:liftOnScroll="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_6dp"
                    android:orientation="vertical"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/previousMonthImage"
                        android:layout_width="@dimen/dimen_36dp"
                        android:layout_height="@dimen/dimen_36dp"
                        android:layout_marginHorizontal="@dimen/dimen_12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/cd_left_navigation"
                        android:onClick="@{() -> viewModel.leftClickEvent()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_chevron_left"
                        app:tint="@color/cv_text_grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/monthYearTV"
                        style="@style/TextAppearance.Inter.SemiBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.monthName}"
                        android:textColor="@color/cv_text_grey"
                        android:textSize="@dimen/dimen_sp22"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/nextMonthImage"
                        app:layout_constraintStart_toEndOf="@id/previousMonthImage"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="April 2018" />

                    <ImageView
                        android:id="@+id/nextMonthImage"
                        android:layout_width="@dimen/dimen_36dp"
                        android:layout_height="@dimen/dimen_36dp"
                        android:layout_marginHorizontal="@dimen/dimen_12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/cd_right_navigation"
                        android:onClick="@{() -> viewModel.rightClickEvent()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_chevron_right"
                        app:tint="@color/cv_text_grey" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_2dp"
                android:layout_marginVertical="@dimen/dimen_2dp"
                android:orientation="vertical">

                <com.kizitonwose.calendar.view.CalendarView
                    android:id="@+id/cv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cv_daySize="square"
                    app:cv_dayViewResource="@layout/calendar_day"
                    app:cv_monthHeaderResource="@layout/calendar_header"
                    app:cv_orientation="horizontal"
                    app:cv_outDateStyle="endOfRow"
                    app:cv_scrollPaged="true" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_highlight_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimen_6dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        app:itemBinding="@{viewModel.selectedDayItemBinding}"
                        app:items="@{viewModel.selectedDayItems}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0"
                        tools:itemCount="4"
                        tools:listitem="@layout/layout_day_event_item" />

                    <View
                        android:id="@+id/separator_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_marginBottom="@dimen/dimen_2dp"
                        android:background="@color/blue_grey_700"
                        app:layout_constraintBottom_toTopOf="@+id/tv_title_major"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_highlight_events"
                        app:layout_constraintVertical_bias="1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title_major"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_8dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:gravity="start"
                        android:text="@string/important_events_for_this_month"
                        android:textColor="@color/cv_text_grey"
                        android:textSize="@dimen/dimen_sp18"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/separator_1"
                        tools:text="Important events for this month :" />

                    <View
                        android:id="@+id/separator_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1dp"
                        android:layout_marginTop="@dimen/dimen_2dp"
                        android:background="@color/blue_grey_700"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/rv_major_events"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_major"
                        app:layout_constraintVertical_bias="0" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_major_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimen_6dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical"
                        app:itemBinding="@{viewModel.monthlyItemBinding}"
                        app:items="@{viewModel.monthlyItems}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toTopOf="@id/add_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_major"
                        app:layout_constraintVertical_bias="0"
                        tools:itemCount="4"
                        tools:listitem="@layout/layout_special_event_item" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/add_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/rv_major_events"
                        app:layout_constraintStart_toStartOf="@id/rv_major_events"
                        app:srcCompat="@drawable/add_btn" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>